<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".login.view.LoginActivity"
    tools:ignore="ExtraText">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/login_image"
        android:layout_marginTop="70dp"
        />


    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="@color/main_green"


        android:text="@string/login"
        android:textSize="16sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintEnd_toEndOf="@+id/button"
        app:layout_constraintStart_toStartOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/button">

        <View
            android:id="@+id/first_dash"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="12dp"
            android:background="@android:color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/Or_Label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/Or_Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/second_dash"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="60dp"
            android:background="@android:color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/Or_Label"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/google_login_btn"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/blue"
        android:drawableLeft="@drawable/google_logo"
        android:text="@string/google_login"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/button"
        app:layout_constraintStart_toStartOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <Button
        android:id="@+id/Apple_login_btn"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/second_black"
        android:drawableLeft="@drawable/apple_logo"
        android:text="@string/apple_login"
        android:textSize="16sp"
        android:layout_marginTop="18dp"
        app:layout_constraintEnd_toEndOf="@+id/google_login_btn"
        app:layout_constraintStart_toStartOf="@+id/google_login_btn"
        app:layout_constraintTop_toBottomOf="@+id/google_login_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>